# python-project-lvl3

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: app_logger.py  cli.py  loader.py  naming.py  page_loader.py  resources.py
page_loader/scripts/: page_loader.py
tests/: test_naming.py  test_page_loader.py  test_resources.py
tests/fixtures/: expected_page.html
